<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Pizza App</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <!-- Content descriptions / a11y -->
    <string name="cd_food_image">Food image</string>
    <string name="cd_favorite_toggle">Toggle favorite</string>
    <string name="cd_add_to_cart">Add to cart</string>
    <string name="cd_product_image">Product image</string>
    <string name="cd_minus">Decrease quantity</string>
    <string name="cd_plus">Increase quantity</string>
    <string name="cd_delete">Remove from cart</string>


    <!-- Dashboard / search -->
    <string name="hint_search">Search</string>
    <string name="popular_food">Popular Food</string>
    <string name="nearest">Nearest</string>
    <string name="see_all">See All</string>
    <string name="choose">Choose</string>
    <string name="your_favorite_food">Your Favorite Food</string>
    <string name="cd_filter">Open filters</string>
    <string name="cd_nav_home">Home</string>
    <string name="cd_nav_favorites">Favorites</string>
    <string name="cd_nav_cart">Cart</string>

    <!-- Detail screen -->
    <string name="back">Back</string>
    <string name="more_options">More options</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="minus">Decrease quantity</string>
    <string name="plus">Increase quantity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="lorem_food_desc">
    </string>
    <string name="google_maps_key">AIzaSyBaUL35FOcjVnFYk7O9djklbUCxsGAwFQs</string>


</resources>
